--- a/ud01/ciclovida/1.requisitos.md
+++ b/ud01/ciclovida/1.requisitos.md
@@ -3,3 +3,8 @@
 - É un programa de consola
 - Os numeros van por consola
 - o resultado imprime na consola
+
+Segunda iteración
+
+- Debe funcionar con letras(non provocar error grave)
+- Opcionalmente pódese un terceiro número
